// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LearnerProfileCard (Snapshot) > should match snapshot when profile data is minimal or empty 1`] = `
<div>
  <div
    class="flex flex-col relative overflow-hidden h-auto text-foreground box-border outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-transform-background motion-reduce:transition-none p-4 w-[300px] shadow-2xl bg-white border border-gray-100 rounded-xl"
    tabindex="-1"
  >
    <div
      class="flex justify-center space-x-3"
    >
      <h3
        class="text-xl font-bold text-foreground"
      >
        Minimal Learner
      </h3>
    </div>
    <hr
      class="shrink-0 bg-divider border-none w-full h-divider my-2"
      role="separator"
    />
    <div
      class="space-y-3 text-sm"
    >
      <div
        class="flex items-start"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock text-gray-500 mr-3 mt-0.5 min-w-4"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <div>
          <span
            class="font-semibold text-gray-800"
          >
            Age:
          </span>
           
          <span
            class="text-gray-600"
          />
        </div>
      </div>
      <div
        class="flex items-start"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-book-open text-gray-500 mr-3 mt-0.5 min-w-4"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 7v14"
          />
          <path
            d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
          />
        </svg>
        <div>
          <span
            class="font-semibold text-gray-800"
          >
            Reading Level:
          </span>
           
          <span
            class="text-gray-600"
          />
        </div>
      </div>
      <hr
        class="shrink-0 bg-divider border-none w-full h-divider my-2"
        role="separator"
      />
      <div
        class="flex flex-col"
      >
        <span
          class="font-semibold flex items-center mb-1 text-gray-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clipboard-list text-gray-500 mr-3"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="4"
              rx="1"
              ry="1"
              width="8"
              x="8"
              y="2"
            />
            <path
              d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
            />
            <path
              d="M12 11h4"
            />
            <path
              d="M12 16h4"
            />
            <path
              d="M8 11h.01"
            />
            <path
              d="M8 16h.01"
            />
          </svg>
           
          Experience:
        </span>
        <p
          class="italic text-gray-600 text-xs pl-6"
        >
          No formal experience.
        </p>
      </div>
      <div
        class="flex flex-col"
      >
        <span
          class="font-semibold flex items-center mb-1 text-gray-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart text-gray-500 mr-3"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
           Interests:
        </span>
        <div
          class="flex flex-wrap gap-1 pl-6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LearnerProfileCard (Snapshot) > should match snapshot with a fully populated profile 1`] = `
<div>
  <div
    class="flex flex-col relative overflow-hidden h-auto text-foreground box-border outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-transform-background motion-reduce:transition-none p-4 w-[300px] shadow-2xl bg-white border border-gray-100 rounded-xl"
    tabindex="-1"
  >
    <div
      class="flex justify-center space-x-3"
    >
      <h3
        class="text-xl font-bold text-foreground"
      >
        Advanced Pythonista
      </h3>
    </div>
    <hr
      class="shrink-0 bg-divider border-none w-full h-divider my-2"
      role="separator"
    />
    <div
      class="space-y-3 text-sm"
    >
      <div
        class="flex items-start"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock text-gray-500 mr-3 mt-0.5 min-w-4"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <div>
          <span
            class="font-semibold text-gray-800"
          >
            Age:
          </span>
           
          <span
            class="text-gray-600"
          >
            35
          </span>
        </div>
      </div>
      <div
        class="flex items-start"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-book-open text-gray-500 mr-3 mt-0.5 min-w-4"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 7v14"
          />
          <path
            d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
          />
        </svg>
        <div>
          <span
            class="font-semibold text-gray-800"
          >
            Reading Level:
          </span>
           
          <span
            class="text-gray-600"
          >
            Professional
          </span>
        </div>
      </div>
      <hr
        class="shrink-0 bg-divider border-none w-full h-divider my-2"
        role="separator"
      />
      <div
        class="flex flex-col"
      >
        <span
          class="font-semibold flex items-center mb-1 text-gray-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clipboard-list text-gray-500 mr-3"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="4"
              rx="1"
              ry="1"
              width="8"
              x="8"
              y="2"
            />
            <path
              d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
            />
            <path
              d="M12 11h4"
            />
            <path
              d="M12 16h4"
            />
            <path
              d="M8 11h.01"
            />
            <path
              d="M8 16h.01"
            />
          </svg>
           
          Experience:
        </span>
        <p
          class="italic text-gray-600 text-xs pl-6"
        >
          10+ years in development, focusing on backend systems and machine learning.
        </p>
      </div>
      <div
        class="flex flex-col"
      >
        <span
          class="font-semibold flex items-center mb-1 text-gray-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart text-gray-500 mr-3"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
           Interests:
        </span>
        <div
          class="flex flex-wrap gap-1 pl-6"
        >
          <div
            class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-secondary/20 text-secondary-600"
          >
            <span
              class="flex-1 text-inherit font-normal px-1"
            >
              Python
            </span>
          </div>
          <div
            class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-secondary/20 text-secondary-600"
          >
            <span
              class="flex-1 text-inherit font-normal px-1"
            >
              Algorithms
            </span>
          </div>
          <div
            class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-secondary/20 text-secondary-600"
          >
            <span
              class="flex-1 text-inherit font-normal px-1"
            >
              AI
            </span>
          </div>
          <div
            class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-secondary/20 text-secondary-600"
          >
            <span
              class="flex-1 text-inherit font-normal px-1"
            >
              Testing
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
